K1J-1971: Apply Spotless code formatting